# access-control-gen2

./: .gitignore  README.md
fw/: Cargo.toml
fw/main/: Cargo.toml
fw/main/src/: config.rs  database_task.rs  local_cardreader_task.rs  log_task.rs  main.rs  main_task.rs  remote_cardreader_task.rs  watchdog.rs
fw/remote/: Cargo.toml
fw/remote/src/: main.rs
fw/src/: config.rs  database_task.rs  local_cardreader_task.rs  log_task.rs  main.rs  main_task.rs  remote_cardreader.rs  remote_cardreader_task.rs  watchdog.rs
fw/uart_protocol/: Cargo.toml  README.md
fw/uart_protocol/src/: lib.rs
hw/: InsulatorWasher.scad  InsulatorWasher.stl  MainsBracket.scad  MainsBracket1.stl  MainsBracket2.stl  MountBracket.stl  README.md  RfidPillar.stl
mfrc-remote-unit/fw/: Cargo.toml
mfrc-remote-unit/fw/src/: main.rs
pcb/controller/: RS485_to_ttl.kicad_sym  controller.kicad_pcb  controller.kicad_prl  controller.kicad_pro  controller.kicad_sch  dc_dc.kicad_sym
pcb/controller/DC-DC.pretty/: hw-1338.kicad_mod
pcb/mains_controller/: G2RL_1_E.step  RS485_to_ttl.kicad_mod  controller.kicad_pcb  controller.kicad_prl  controller.kicad_pro  controller.kicad_sch  fp-info-cache  fp-lib-table  sym-lib-table
pcb/mains_controller/G2RL.pretty/: RELAY_G2RL-1-E DC5_OMR.kicad_mod
pcb/mains_controller/Pico.pretty/: RaspberryPi_Pico_Common_THT_no_ant.kicad_mod
pcb/mains_controller/RS485_to_ttl.pretty/: RS485_to_ttl.kicad_mod
scad/: MountBracket.scad  README.md  RfidPillar.scad
