[package]
name = "access-control-gen2"
version = "0.1.0"
authors = [ "David Pye <davidmpye@gmail.com>" ]
description = "MFRC522/Pico based solution for Makerspace access control system"
edition = "2021"
license = "MIT OR Apache-2.0"
categories = [ "embedded", "no-std" ]

[features]
#Communicate with the cardreader over RS485
default= [ "remote-cardreader" ]
remote-cardreader = []

[env]
##These are settings for the W25Q32FV flash chip we are using (32MBit)
PAGE_SIZE="256"
MAX_PAGE_COUNT="16384"

[dependencies]
defmt = "0.3"
defmt-rtt = "0.4"
fixed = "1.23.1"
fixed-macro = "1.2"

cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
critical-section = "1.1"
panic-probe = { version = "0.3", features = ["print-defmt"] }
byte-slice-cast = { version = "1.2.0", default-features = false }
rand_core = "0.6.4"
embedded-hal-async = "1.0"
embedded-hal-bus = { version = "0.1", features = ["async"] }
embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }
embedded-storage = { version = "0.3" }

static_cell = "2.1"
portable-atomic = { version = "1.5", features = ["critical-section"] }
log = "0.4"
pio-proc = "0.2"
pio = "0.2.1"
rand = { version = "0.8.5", default-features = false }
postcard-schema = "0.2.0"
embassy-time = "0.4.0"
embassy-sync = "0.6.2"
embassy-executor = { version = "0.7.0", features = ["arch-cortex-m", "defmt", "executor-interrupt", "executor-thread", "task-arena-size-196608"] }
embassy-usb = "0.4.0"
postcard = "1.1.1"
assign-resources = "0.4.1"
libm = "0.2.11"
heapless = "0.7.0"
serde = { version = "1.0.219", default-features = false }
#mfrc522 = { path = "../../mfrc522" }
mfrc522 = "0.8.0"
rp-pac = { version = "7.0.0", features = ["cortex-m-rt", "defmt", "rp2040", "rt"] }
cyw43 = "0.3.0"
embassy-net = { version = "0.7.0", features = ["defmt", "dhcpv4-hostname", "dns", "medium-ip", "proto-ipv4", "tcp"] }
reqwless = { version = "0.13.0", features = ["defmt"] }
cyw43-pio = "0.4.0"
embassy-rp = { version = "0.4.0", features = ["rp2040", "critical-section-impl", "defmt", "time-driver"] }
md5 = { version = "0.7.0", default-features = false }
format_no_std = "1.2.0"
embedded-hal = "1.0.0"
embedded-hal-nb = "1.0.0"
w25q32jv = "0.5.1"
ekv = "1.0.0"

[profile.release]
debug = 2
lto = true
opt-level = 'z'

[profile.dev]
debug = 2
lto = true
opt-level = "z"

